--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,6 +2,7 @@ trigger:
 - master
 
 resources:
+  repositories:
   - repository: templates
     type: github
     name: JeremyTCD/DevOps.AzurePipelines
