--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,7 @@ resources:
   - repository: templates
     type: github
     name: JeremyTCD/DevOps.AzurePipelines
+    endpoint: https://github.com/JeremyTCD/DevOps.AzurePipelines.git
 
-jobs: 
+jobs:
 - template: nuget-package.yml@templates
