--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ resources:
   repositories:
   - repository: templates
     type: github
-    name: JeremyTCD/DevOps.AzurePipelines
+    name: DevOps.AzurePipelines
     endpoint: https://github.com/JeremyTCD/DevOps.AzurePipelines.git
 
 jobs:
