--- a/azure-test.yml
+++ b/azure-test.yml
@@ -22,4 +22,4 @@ jobs:
     inputs:
       command: test
       projects: 'test/**/*.csproj'
-      arguments: '--configuration Release'
+      arguments: '--no-build --configuration Release'
