--- a/test/Test.AzurePipelines.Tests/Test.AzurePipelines.Tests.csproj
+++ b/test/Test.AzurePipelines.Tests/Test.AzurePipelines.Tests.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
