--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,3 +15,4 @@ jobs:
 - template: nuget-package.yml@templates
   parameters:
     vstsFeedName: "Test"
+    nugetEndpoint: "https://staging.nuget.org/api/v2/package"
