--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,5 +14,5 @@ resources:
 jobs:
 - template: nuget-package.yml@templates
   parameters:
-    nugetRestoreVstsFeed: "Main"
+    nugetRestoreEndPoint: "https://pkgs.dev.azure.com/JeremyTCD/_packaging/Main/nuget/v2"
     nugetPushEndpoint: "https://staging.nuget.org/api/v2/package"
