--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,18 +1,15 @@
 trigger:
 - master
 
-variables:
-  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
-
 resources:
   repositories:
   - repository: templates
     type: github
-    name: JeremyTCD/DevOps.AzurePipelines
+    name: JeremyTCD/DevOps.AzurePipelines.Nuget
     endpoint: JeremyTCD
 
 jobs:
-- template: nuget-package.yml@templates
+- template: main.yml@templates
   parameters:
     nugetRestoreEndPoint: "https://pkgs.dev.azure.com/JeremyTCD/_packaging/Main/nuget/v2"
     nugetPushEndpoint: "https://staging.nuget.org/api/v2/package"
