--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,11 +5,11 @@ resources:
   repositories:
   - repository: templates
     type: github
-    name: JeremyTCD/DevOps.AzurePipelines.Nuget
+    name: JeremyTCD/DevOps.AzurePipelines
     endpoint: JeremyTCD
 
 jobs:
-- template: main.yml@templates
+- template: templates/nuget/main.yml@templates
   parameters:
     nugetRestoreEndPoint: "https://pkgs.dev.azure.com/JeremyTCD/_packaging/Main/nuget/v2"
     nugetPushEndpoint: "https://staging.nuget.org/api/v2/package"
