--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,10 +9,7 @@ resources:
     endpoint: JeremyTCD
 
 jobs:
-#- template: templates/nuget/main.yml@templates
-#  parameters:
-#    nugetRestoreEndpoint: "https://pkgs.dev.azure.com/JeremyTCD/_packaging/Main/nuget/v2"
-#    nugetPushEndpoint: "https://pkgs.dev.azure.com/JeremyTCD/_packaging/Main/nuget/v2"
+- template: templates/nuget/main.yml@templates
 - template: templates/docs/main.yml@templates
   parameters:
     nugetRestoreEndpoint: "https://pkgs.dev.azure.com/JeremyTCD/_packaging/Main/nuget/v2"
