Added PackageIconUrl element to csproj

--- a/src/Test.AzurePipelines/Test.AzurePipelines.csproj
+++ b/src/Test.AzurePipelines/Test.AzurePipelines.csproj
@@ -6,6 +6,7 @@
         <EmbedUntrackedSources>true</EmbedUntrackedSources>
         <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <PackageIconUrl>https://raw.githubusercontent.com/JeremyTCD/Test.AzurePipelines/master/nuget_icon.png</PackageIconUrl>
     </PropertyGroup>
 
     <ItemGroup>
