--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,14 +5,14 @@ resources:
   repositories:
   - repository: templates
     type: github
-    name: JeremyTCD/DevOps.AzurePipelines
+    name: JeringTech/DevOps.AzurePipelines
     endpoint: JeremyTCD
 
 jobs:
 - template: templates/nuget/main.yml@templates
   parameters: 
     nugetPushEndpoint: "https://int.nugettest.org/api/v2/package"
-- template: templates/docs/main.yml@templates
-  parameters:
-    nugetRestoreEndpoint: "https://pkgs.dev.azure.com/JeremyTCD/_packaging/Main/nuget/v2"
-    nugetRestorePat: "$(nugetRestorePat)"
+#- template: templates/docs/main.yml@templates
+#  parameters:
+#    nugetRestoreEndpoint: "https://pkgs.dev.azure.com/JeremyTCD/_packaging/Main/nuget/v2"
+#    nugetRestorePat: "$(nugetRestorePat)"
